test/ddc-spec/error/01-ErrorExp/24-PrivateRebound/Main.dcs

module Test with letrec

foo [r: Region] (x: Unit)
 = private r in ()

